@@ -2,12 +2,13 @@ hw-detect (1.28) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Drop dependency on hotplug-udeb for hw-detect as there's no such thing.
+  * ethdetect.sh: avoid grep error if /etc/network/devnames doesn't exist.
 
   [ Colin Watson ]
   * Rename /etc/network/devnames.gz to /etc/network/devnames-static.gz to
     avoid confusion with /etc/network/devnames (closes: #340919).
 
- -- Frans Pop <fjp@debian.org>  Sun, 27 Nov 2005 01:33:47 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 27 Nov 2005 17:24:41 +0100
 
 hw-detect (1.27) unstable; urgency=low
 
